...
            "state": "translated",
            "value": "無法解密來自 %@ 的訊息"
          }
        }
      }
    },
    "Cancel": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Cancel"
...
            "state": "translated",
            "value": "憑證指紋"
          }
        }
      }
    },
    "Chat": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Chat"
...
            "state": "translated",
            "value": "請連接相同的 WiFi 網路以傳輸檔案"
          }
        }
      }
    },
    "Connected": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Connected"
...
            "state": "translated",
            "value": "已停用的功能將自動拒絕收到的請求。"
          }
        }
      }
    },
    "Disconnect": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Disconnect"
...
            "state": "translated",
            "value": "顯示名稱（選填）"
          }
        }
      }
    },
    "Done": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Done"
...
            "state": "translated",
            "value": "File %1$@ of %2$@"
          }
        }
      }
    },
    "File Transfer": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "File Transfer"
...
            "state": "translated",
            "value": "開始使用"
          }
        }
      }
    },
    "Go offline": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Go offline"
...
            "state": "translated",
            "value": "離線"
          }
        }
      }
    },
    "Go online": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Go online"
...
            "state": "translated",
            "value": "送出錯誤報告"
          }
        }
      }
    },
    "Send File": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Send File"
...
            "state": "translated",
            "value": "已傳送"
          }
        }
      }
    },
    "Settings": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Settings"
...
            "state": "translated",
            "value": "檢視已儲存的裝置和群組"
          }
        }
      }
    },
    "Voice Call": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Voice Call"
...
            "state": "translated",
            "value": "語音通話"
          }
        }
      }
    },
    "Voice Calls": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Voice Calls"
...
            "state": "translated",
            "value": "你"
          }
        }
      }
    },
    "You are offline": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "You are offline"
...
